@@ -150,6 +150,7 @@ shadowJar {
             "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
             "--add-opens=javafx.graphics/javafx.css=ALL-UNNAMED",
             "-Dsun.java2d.uiScale=1.0",
